# mini_rag

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  run_sanity.py
.github/: dependabot.yml
.github/workflows/: ci.yml
github/workflows/: ci.yml
src/: docs_loader.py  embed.py  query_cli.py
src/mini_rag/: app.py  app_1.py  docs_loader.py  embed.py  embedder.py  embedder_openai.py  indexer.py  indexer_1.py  ingest.py  query_cli.py  retrieval.py  utils.py
src/mini_rag/scripts/: build_index.py
src/mini_rag/tests/: conftest.py  test_docs_loader.py  test_indexer.py  test_pipeline.py
tests/: test_pipeline.py
